Velcro test First SandBox/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Signature__c</fullName>
        <description>Email signature formatted</description>
        <label>Email Signature</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Onboarding_Training_Date__c</fullName>
        <description>Last onboarding trainign for SFDC</description>
        <label>Onboarding Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oracle_User_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>User ID from Oracle</inlineHelpText>
        <label>Oracle User ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Territory__c</fullName>
        <inlineHelpText>This field will be used to populate the default territory on newly created accounts.</inlineHelpText>
        <label>Primary Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA-20-2120-2122</fullName>
                </value>
                <value>
                    <fullName>CA-20-2120-2124</fullName>
                </value>
                <value>
                    <fullName>CA-20-2120-2125</fullName>
                </value>
                <value>
                    <fullName>CA-20-2120-2126</fullName>
                </value>
                <value>
                    <fullName>CA-20-2200-2000</fullName>
                </value>
                <value>
                    <fullName>CA-20-2300-2300</fullName>
                </value>
                <value>
                    <fullName>CA-20-2500-2502</fullName>
                </value>
                <value>
                    <fullName>CA-20-2840-2840</fullName>
                </value>
                <value>
                    <fullName>US-01-1200-0201</fullName>
                </value>
                <value>
                    <fullName>US-01-1200-0204</fullName>
                </value>
                <value>
                    <fullName>US-01-1200-0205</fullName>
                </value>
                <value>
                    <fullName>US-01-1200-0207</fullName>
                </value>
                <value>
                    <fullName>US-01-1200-0208</fullName>
                </value>
                <value>
                    <fullName>US-01-1200-0209</fullName>
                </value>
                <value>
                    <fullName>US-01-1210-0213</fullName>
                </value>
                <value>
                    <fullName>US-01-1210-0214</fullName>
                </value>
                <value>
                    <fullName>US-01-1220-0221</fullName>
                </value>
                <value>
                    <fullName>US-01-1240-0242</fullName>
                </value>
                <value>
                    <fullName>US-01-1250-0253</fullName>
                </value>
                <value>
                    <fullName>US-01-1250-0254</fullName>
                </value>
                <value>
                    <fullName>US-01-1250-0255</fullName>
                </value>
                <value>
                    <fullName>US-01-1250-0256</fullName>
                </value>
                <value>
                    <fullName>US-01-1250-0257</fullName>
                </value>
                <value>
                    <fullName>US-01-1250-0259</fullName>
                </value>
                <value>
                    <fullName>US-01-1270-0271</fullName>
                </value>
                <value>
                    <fullName>US-01-1270-0272</fullName>
                </value>
                <value>
                    <fullName>US-01-3000-0355</fullName>
                </value>
                <value>
                    <fullName>US-01-3000-0375</fullName>
                </value>
                <value>
                    <fullName>US-01-3000-0396</fullName>
                </value>
                <value>
                    <fullName>US-01-5010-0524</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Territory__c</fullName>
        <inlineHelpText>This field designates the secondary territory of the sales rep.</inlineHelpText>
        <label>Secondary Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US-01-1200-0204</fullName>
                </value>
                <value>
                    <fullName>US-01-1200-0209</fullName>
                </value>
                <value>
                    <fullName>US-01-1220-0221</fullName>
                </value>
                <value>
                    <fullName>US-01-1240-0242</fullName>
                </value>
                <value>
                    <fullName>CA-20-2500-2502</fullName>
                </value>
                <value>
                    <fullName>CA-20-2300-2300</fullName>
                </value>
                <value>
                    <fullName>CA-20-2200-2000</fullName>
                </value>
                <value>
                    <fullName>US-01-1200-0205</fullName>
                </value>
                <value>
                    <fullName>US-01-1200-0201</fullName>
                </value>
                <value>
                    <fullName>US-01-1200-0208</fullName>
                </value>
                <value>
                    <fullName>US-01-1200-0207</fullName>
                </value>
                <value>
                    <fullName>US-01-1250-0256</fullName>
                </value>
                <value>
                    <fullName>US-01-3000-0375</fullName>
                </value>
                <value>
                    <fullName>US-01-3000-0355</fullName>
                </value>
                <value>
                    <fullName>US-01-3000-0396</fullName>
                </value>
                <value>
                    <fullName>US-01-1250-0254</fullName>
                </value>
                <value>
                    <fullName>US-01-1250-0253</fullName>
                </value>
                <value>
                    <fullName>US-01-1250-0255</fullName>
                </value>
                <value>
                    <fullName>US-01-1270-0271</fullName>
                </value>
                <value>
                    <fullName>US-01-1250-0257</fullName>
                </value>
                <value>
                    <fullName>US-01-1210-0213</fullName>
                </value>
                <value>
                    <fullName>US-01-1210-0214</fullName>
                </value>
                <value>
                    <fullName>CA-20-2120-2122</fullName>
                </value>
                <value>
                    <fullName>CA-20-2120-2124</fullName>
                </value>
                <value>
                    <fullName>CA-20-2120-2125</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ltnadptn__Can_Use_Lightning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field contains a copy of the value of the user permission PermissionslightningExperienceUser.  If TRUE, this user sees a link in the profile menu to switch to Lightning or back to Classic.  If FALSE, this user cannot navigate to Lightning.</description>
        <inlineHelpText>This field contains a copy of the value of the user permission PermissionslightningExperienceUser.  If TRUE, this user sees a link in the profile menu to switch to Lightning or back to Classic.  If FALSE, this user cannot navigate to Lightning.</inlineHelpText>
        <label>Can Use Lightning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ltnadptn__Using_Lightning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this user&apos;s next login or clicks will load Lightning.  If false, the user&apos;s next login or clicks will load Classic.  This is updated using scheduled code, so the values may lag if users have switched to Classic or Lightning from their profile menu recently.</description>
        <inlineHelpText>If true, this user&apos;s next login or clicks will load Lightning.  If false, the user&apos;s next login or clicks will load Classic.  This is updated using scheduled code, so the values may lag if users have switched to Classic or Lightning from their profile men</inlineHelpText>
        <label>Using Lightning?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor_User__c</fullName>
        <description>Used with the Campaign Monitor connector. Enter the users Campaign Monitor email address.</description>
        <inlineHelpText>Used with the Campaign Monitor connector. Enter the users Campaign Monitor email address.</inlineHelpText>
        <label>Campaign Monitor User</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Oracle_User_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>CONSUMER</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>CONSUMER</value>
        </filters>
        <label>CONSUMER</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Chatter_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>chatter</value>
        </filters>
        <label>Chatter Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EMEA_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>EMEA Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>